k8s/staging/nginx-deployment.yaml
# Nginx Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qrgenix-nginx
  namespace: qrgenix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qrgenix-nginx
  template:
    metadata:
      labels:
        app: qrgenix-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: qrgenix-nginx-config
