k8s/staging/nginx-service.yaml
# Nginx Service
apiVersion: v1
kind: Service
metadata:
  name: qrgenix-nginx
  namespace: qrgenix
spec:
  selector:
    app: qrgenix-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
