k8s/staging/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qrgenix-ingress-http
  namespace: qrgenix
  labels:
    app.kubernetes.io/managed-by: qrgenix
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: qrgenix-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: qrgenix.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qrgenix-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: qrgenix-backend
                port:
                  number: 8000
